Bug 1897006 - revert the change of disabling reuse device. r=sotaro a=pascalc

As bug 1896823 has disabled the device reuse for intel gen12, it doesn't
seem necessary to add this workaround to disable the device reuse.

We should revert this and investigate whether we can use DXVA decoder
directly via ffmpeg in Bug 1893427.

Differential Revision: https://phabricator.services.mozilla.com/D210721